# openvn

./: .gitignore  CHANGELOG-patch.md  CHANGELOG.md  CONTRIBUTING.md  DELIVERY-M2-FIX.md  DELIVERY.md  LICENSE-assets.md  README-patch.md  README-replacement.md  README.md  REMOVE-FILES.txt  VERIFICATION.md  ci-snippet.yml  collect-openvn-amiga-render-debug.sh  openvn-pr1o-datatypes-diagnostic.txt
.cleanup-backup/20260717-034735/: .gitignore
.github/workflows/: ci.yml  repository-hygiene.yml
backends/amiga/: README.md
backends/renpy/: README.md
compiler/: pyproject.toml
compiler/src/openvn/: __init__.py  cli.py  compiler.py  diagnostics.py  doctor.py  errors.py  fsuae.py  ink.py  ink_parser.py  project.py  schema_validation.py  story.py  validator.py
compiler/src/openvn/assets/: __init__.py  manifest.py
compiler/src/openvn/backends/: __init__.py
compiler/src/openvn/backends/amiga/: __init__.py  assets_codegen.py  conversion.py  package.py  profiles.py  story_codegen.py
compiler/src/openvn/backends/renpy/: __init__.py  assets.py  generator.py
compiler/src/openvn/model/: __init__.py  nodes.py  story.py  validation.py
compiler/tests/: test_amiga_assets_codegen.py  test_amiga_audio_service.py  test_amiga_background_pipeline.py  test_amiga_character_pipeline.py  test_amiga_cli_export.py  test_amiga_conversion.py  test_amiga_double_buffering.py  test_amiga_graphics_service.py  test_amiga_image_loading.py  test_amiga_mod_complete_effects.py  test_amiga_mod_effects.py  test_amiga_mod_replayer.py  test_amiga_package.py  test_amiga_planar_rendering.py  test_amiga_profiles.py  test_amiga_real_mod_playback.py  test_amiga_runtime_skeleton.py  test_amiga_story_codegen.py  test_amiga_story_execution.py  test_asset_manifest.py  test_cli.py  test_cli_export.py  test_compile_golden.py  test_compiler.py  test_conditions.py  test_demo_asset_hygiene.py  test_diagnostics.py  test_doctor.py  test_fsuae_package.py  test_import.py  test_ink_parser.py  test_ink_parser_golden.py  test_lighthouse_audio.py  test_lighthouse_demo.py  test_presentation_commands.py  test_project.py  test_renpy_assets.py  test_renpy_backend.py  test_renpy_golden.py  test_renpy_presentation.py  (+4 more)
compiler/tests/golden/branching/: expected.json  main.ink
compiler/tests/golden/compile-minimal/: expected.json  main.ink  project.yaml
compiler/tests/golden/minimal/: expected.json  main.ink
compiler/tests/golden/renpy-branching/: script.rpy
compiler/tests/golden/story-graph/: main.ink
docs/: m81-pr6-golden-composer-verification.md  runtime-api.md
docs/design/: amiga-audio-service.md  amiga-double-buffering-palette.md  amiga-export-asset-conversion.md  amiga-graphics-service.md  amiga-image-loading-rendering.md  amiga-mod-replayer.md  amiga-native-runtime.md  amiga-package-format.md  amiga-paula-playback.md  amiga-planar-rendering.md  amiga-player-skeleton.md  amiga-protracker-complete-effects.md  amiga-protracker-effects.md  amiga-real-mod-playback.md  amiga-story-execution-core.md  asset-pipeline.md  compiler-architecture.md  compiler-integration.md  diagnostics-integration.md  diagnostics.md  fs-uae-runnable-demo.md  future-open-narrative-format.md  generated-amiga-story-runtime.md  json-strict-validation.md  minimal-ink-parser.md  philosophy.md  presentation-commands.md  renpy-backend.md  renpy-story-graph-completion.md  scope.md  semantic-story-model.md  story-graph.md  the-last-lighthouse.md  vertical-slice-demo.md
docs/spec/: amiga-arexx-runtime-principle.md  amiga-arexx-runtime.md  backend-contract.md  diagnostics.md  openvn-story-format.md  roadmap-addition.md  runtime-contract.md
docs/tutorials/: the-last-lighthouse.md
openvn-amiga-render-debug/: OpenVNDemo.fs-uae  diagnostics.txt
profiles/: amiga-aga.yaml  amiga-ocs.yaml  amiga-rtg.yaml
runtimes/amiga-native/: CMakeLists.txt  Makefile  README.md
runtimes/amiga-native/build-host/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  openvn-player-host  test-openvn-dispatch  test-openvn-story
runtimes/amiga-native/build-host/Testing/Temporary/: CTestCostData.txt
runtimes/amiga-native/cmake/: m68k-amigaos.cmake.example
runtimes/amiga-native/include/: openvn_8svx.h  openvn_assets_runtime.h  openvn_audio.h  openvn_audio_amiga.h  openvn_audio_host.h  openvn_bitmap_amiga.h  openvn_condition.h  openvn_dialogue.h  openvn_dispatch.h  openvn_display_amiga.h  openvn_graphics.h  openvn_graphics_amiga.h  openvn_image.h  openvn_mod.h  openvn_mod_player.h  openvn_palette.h  openvn_paula.h  openvn_planar.h  openvn_player.h  openvn_scene_layout.h  openvn_story.h  openvn_variables.h
runtimes/amiga-native/src/: assets_runtime.c  audio.c  audio_8svx.c  audio_amiga.c  audio_host.c  audio_mod.c  audio_mod_player.c  audio_paula.c  bitmap_amiga.c  condition.c  dialogue.c  dispatch.c  display_amiga.c  graphics.c  graphics_amiga.c  graphics_host.c  image_ilbm.c  main_amiga.c  main_host.c  palette.c  planar.c  player.c  player_state.c  scene_layout.c  story.c  variables.c
runtimes/amiga-native/tests/: assets.generated.c  assets.generated.h  minimal-story.json  story.generated.c  story.generated.h  test_8svx.c  test_assets_runtime.c  test_audio.c  test_bitmap_font.c  test_check.h  test_condition.c  test_dialogue.c  test_dispatch.c  test_graphics.c  test_image.c  test_mod.c  test_mod_effects.c  test_mod_player.c  test_palette.c  test_paula.c  test_planar.c  test_player_audio.c  test_scene_layout.c  test_story.c  test_variables.c
runtimes/amiga-native/tests/fixtures/: erik_neutral.iff  lighthouse_storm.iff  thunder.8svx
schemas/: openvn-story-0.1.schema.json  openvn-story-0.3.schema.json  openvn-story-0.4.schema.json
scripts/: apply-m6-pr1f.py  apply-m6-pr1g.py  apply-m6-pr1h.py  apply-m6-pr1i.py  apply-m6-pr1j.py  apply-m6-pr1k.py  apply-m6-pr1m.py  apply-m6-pr1n.py  apply-m6-pr1p.py  apply-m6-pr1q.py  apply-m6-pr1r.py  build-m68k-demo-player.sh  check-repository-hygiene.sh  cleanup-generated-artifacts.sh  fix-pr5.1-recovery.sh  fix-pr6-font-height.sh  release-check.sh  run-m6-pr1o-diagnostic.sh  verify-pr6.1-recovery.sh
(+63 files in other folders)
